remove most usage of NEXT_CHARISMATIC_ELECTION_DATE(S)

--- a/polling_stations/templates/fragments/advance_voting_station.html
+++ b/polling_stations/templates/fragments/advance_voting_station.html
@@ -11,7 +11,7 @@
 
         {% if advance_voting_station.opening_times %}
             <h4>{% trans "Opening times" %}</h4>
-            {% include "fragments/opening_times.html" %}
+            {% include "fragments/advance_opening_times.html" %}
 
         {% endif %}
 
