--- a/polling_stations/templates/fragments/polling_station_unknown.html
+++ b/polling_stations/templates/fragments/polling_station_unknown.html
@@ -38,15 +38,4 @@
     {% endif %}
 </p>
 
-<p><strong>
-    {% if has_city_of_london_ballots %}
-        {% blocktrans %}Polling stations are open from 8am to 8pm for City of London local elections{% endblocktrans %}{% if not NEXT_CHARISMATIC_ELECTION_DATE %}.{% endif %}
-    {% else %}
-        {% blocktrans %}Polling stations are open from 7am to 10pm{% endblocktrans %}{% if not NEXT_CHARISMATIC_ELECTION_DATE %}.{% endif %}
-    {% endif %}
-    {% if NEXT_CHARISMATIC_ELECTION_DATE %}{% blocktrans %} on {{ NEXT_CHARISMATIC_ELECTION_DATE }}{% endblocktrans %}.{% endif %}
-</strong>
-    {% if has_city_of_london_ballots %}
-        For elections to other organisations (e.g: GLA or Parliament) polling stations will be open from 7am to 10pm.
-    {% endif %}
-</p>
+{% include "fragments/opening_times.html" %}
