feedback form text changes
aligning text with the same form on WCIVF

--- a/polling_stations/apps/feedback/templates/feedback/feedback_form.html
+++ b/polling_stations/apps/feedback/templates/feedback/feedback_form.html
@@ -18,7 +18,7 @@
 
     <h3>
         <span aria-hidden="true">🔎</span>
-        {% trans "Did you find this useful?" %}
+        {% trans "Did you find what you were looking for?" %}
         <span aria-hidden="true">🔎</span>
     </h3>
     <span id="feedback_choices_container">
@@ -29,7 +29,7 @@
     </span>
     <div id="vote_choices_container">
         <h3><span aria-hidden="true">🗳️</span>
-            {% trans "Has this information made you more likely to vote?" %}
+            {% trans "Has this service changed your likelihood of voting?" %}
             <span aria-hidden="true">🗳️</span></h3>
         {% for choice in feedback_form.vote %}
             {{ choice.tag }}
