--- a/polling_stations/templates/fragments/multiple_elections.html
+++ b/polling_stations/templates/fragments/multiple_elections.html
@@ -5,7 +5,7 @@
         {% trans "Multiple elections are happening!" %}
     </h3>
     <p>
-        {% trans "Lucky you! There's more than one election taking place in your area." %}
+        {% trans "Lucky you! There's more than one election taking place for your address." %}
     </p>
     <p>
         {% trans "Don't worry, you can vote in all of them at the same polling station and read about them at" context "followed by link to whocanivotefor.co.uk, with that link text" %}
