--- a/polling_stations/templates/fragments/no_election.html
+++ b/polling_stations/templates/fragments/no_election.html
@@ -4,11 +4,11 @@
 {% if cancelled_election.cancelled %}
     {% include "fragments/cancelled_election.html" %}
 {% else %}
-    <h2>{% trans "We don't know of any upcoming elections in your area" %}</h2>
+    <h2>{% trans "We don't know of any upcoming elections for your address" %}</h2>
     <p>
-        {% trans "We're not aware of any upcoming elections in your area." %}
+        {% trans "We're not aware of any upcoming elections for your address." %}
         {% blocktrans trimmed with council.electoral_services_phone_numbers.0 as council_phone and council.electoral_services_website as council_website %}
-            If you think there may be elections in your area,
+            If you think there may be elections for your address,
             check your local <a href="{{ council_website }}">council website</a> for more information,
             or contact {{ council }} on <strong><a href="tel:{{ council_phone }}">{{ council_phone }}</a></strong>.
         {% endblocktrans %}
