--- a/polling_stations/templates/fragments/ni_out_of_cycle_station.html
+++ b/polling_stations/templates/fragments/ni_out_of_cycle_station.html
@@ -4,11 +4,11 @@
 {% if cancelled_election.cancelled %}
     {% include "fragments/cancelled_election.html" %}
 {% else %}
-    <h2>{% trans "You don't have any upcoming elections in your area" %}</h2>
+    <h2>{% trans "You don't have any upcoming elections for your address" %}</h2>
     <p>
-        {% trans "We are not aware of any upcoming elections in your area." %}
+        {% trans "We are not aware of any upcoming elections for your address." %}
         {% blocktrans trimmed with council.electoral_services_phone_numbers.0 as council_phone and council.electoral_services_website as council_website %}
-            If you think there may be elections in your area,
+            If you think there may be elections for your address,
             check the <a href="{{ council_website }}">website</a> of The Electoral Office for Northern Ireland for more information,
             or contact them on on <strong><a href="tel:{{ council_phone }}">{{ council_phone }}</a></strong>.
         {% endblocktrans %}
