remove dead facebook link, replace with things that work
aligns footer with https://whocanivotefor.co.uk/

--- a/polling_stations/templates/base.html
+++ b/polling_stations/templates/base.html
@@ -89,9 +89,13 @@
             <nav>
                 <h2 class="ds-h6">Connect with us</h2>
                 <ul>
-                    <li><a href="https://twitter.com/democlub/">{% trans "Twitter" context "link to Democracy Club Twitter page" %}</a></li>
-                    <li><a href="https://facebook.com/DemocracyClub/">{% trans "Facebook" context "link to Democracy Club Facebook page" %}</a></li>
-                    <li><a href="https://github.com/DemocracyClub/">{% trans "GitHub" context "link to Democracy Club GitHub page" %}</a></li>
+                    <li><a href="https://democracyclub.org.uk/contact/">Contact Us</a></li>
+                    <li><a rel="me" href="https://mastodon.me.uk/@DemocracyClub">Mastodon</a></li>
+                    <li><a href="https://twitter.com/democlub">X</a></li>
+                    <li><a href="https://github.com/DemocracyClub">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/company/democracy-club-cic">LinkedIn</a></li>
+                    <li><a href="https://mailinglist.democracyclub.org.uk/subscription/form">Join our Mailing List</a></li>
+                    <li><a href="https://mailinglist.democracyclub.org.uk/archive">Newsletter Archive</a></li>
                 </ul>
             </nav>
         </div>
