throw on errror

--- a/polling_stations/apps/file_uploads/templates/file_uploads/council_detail.html
+++ b/polling_stations/apps/file_uploads/templates/file_uploads/council_detail.html
@@ -24,7 +24,7 @@
 
                     <tr>
                         <td>
-                            {% if upload.github_issue %} -
+                            {% if upload.github_issue %}
                                 <a href="{{ upload.github_issue }}">{{ upload.election_date }}</a>
                             {% else %}
                                 {{ upload.election_date }}
