Fix typo in accessibility information upload message

--- a/polling_stations/apps/file_uploads/templates/file_uploads/accessibility_information_report.html
+++ b/polling_stations/apps/file_uploads/templates/file_uploads/accessibility_information_report.html
@@ -3,7 +3,7 @@
 {% block content %}
   <h2>Upload Accessibility Information</h2>
   {% if not errors and not warnings %}
-    <p>✔️ Accessibility Information uploaded sucessfully with no errors and no warnings</p>
+    <p>✔️ Accessibility Information uploaded successfully with no errors and no warnings</p>
   {% endif %}
 
   {% if errors %}
