only show a11y note blocks if we have text in target language

--- a/polling_stations/templates/fragments/at_the_station.html
+++ b/polling_stations/templates/fragments/at_the_station.html
@@ -42,7 +42,7 @@
         </li>
     {% endif %}
 </ul>
-{% if station.accessibility_information.at_the_station %}
+{% if station.accessibility_information.at_the_station_text %}
     <p>
         <strong>{% trans "The electoral services team have added a note about this station:" %}</strong>
     </p>
